<resources>
    <string name="app_name">lab1_constraintLT</string>
    <string name="button1">Not_Tap</string>
    <string name="text1">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="text2">Hi, how are you?</string>
    <string name="paint">Paint</string>
    <string name="button2">Tap!</string>
    <string name="button3">Tap-Tap!!</string>
</resources>